--- a/React/meu-app-react/src/App.css
+++ b/React/meu-app-react/src/App.css
@@ -1,5 +1,5 @@
 .container {
-  width: 900px;
+  width: 1100px;
   margin: auto;
  text-align: center;
 }
@@ -12,4 +12,17 @@ ul li, p  {
   list-style: none;
   margin: 5px;
 
+}
+.contato {
+  width: 100%;
+  margin: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+ 
+}
+
+.contato h2 {
+  margin-bottom: 15px;
 }
