--- a/Atividade03/src/componentes/Footer/Footer.css
+++ b/Atividade03/src/componentes/Footer/Footer.css
@@ -1,13 +1,13 @@
 footer {
-    position: relative;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     width: 100%;
     height: 20px;
-    background: #3498db;
+    background: #fff;
     padding: 10px 0;
-    color: #fff;
+    color: black;
     display: flex;
     align-items: center;
    
