--- a/Atividade03/src/componentes/Form/Form.css
+++ b/Atividade03/src/componentes/Form/Form.css
@@ -1,17 +1,10 @@
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 2%;
-}
+
 
 .form-input {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
 }
 
 .form-input input {
